# notas-musicais

./: .readthedocs.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml
docs/: 01_tutorial.md  02_contribua.md  index.md
docs/api/: campos_harmonicos.md
docs/stylesheets/: extra.css
docs/templates/: cards.html  instalacao.md  todos.md
notas_musicais/: acordes.py  campos_harmonicos.py  cli.py  escalas.py
tests/: test_acordes.py  test_cli.py  test_escalas.py
