[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["Kaio Rocha <kaiodtr@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
notas-musicais = "notas_musicais.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.11.0"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.15"
mkdocstrings = "^0.24.1"
mkdocstrings-python = "^1.9.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
format = "blue . && isort ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x -vv --cov=notas_musicais"
post_test = "coverage html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
