[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["Kaio Rocha <kaiodtr@gmail.com>"]
license = "Beerware"
readme = "README.md"
classifiers = [
    "Topic :: Education",
    "Environment :: Console",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.urls]
"Documentação" = "https://notas-musicais-kaiodtr.readthedocs.io/pt-br/latest/"
"Código" = "https://github.com/kaiodt/notas-musicais"
"Bug Tracker" = "https://github.com/kaiodt/notas-musicais/issues"

[tool.poetry.scripts]
notas-musicais = "notas_musicais.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.11.0"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.15"
mkdocstrings = "^0.24.1"
mkdocstrings-python = "^1.9.0"
mkdocs-macros-plugin = "^1.0.5"
jinja2 = "^3.1.3"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
format = "blue . && isort ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x -vv --cov=notas_musicais"
post_test = "coverage html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
